--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,4 @@
 body {
-  display: flex;
   font-family: futura,sans-serif;
 }
 
@@ -9,11 +8,10 @@ body {
 }
 
 .summaries {
+  position: absolute;
   width: 30%;
   max-height: 100%;
   max-width: 600px;
-  display: flex;
-  flex-direction: column;
   overflow-y: scroll;
 }
 
